lox-tests/tests/operator/add_string_nil.stderr
ERROR: Unsupported operation '+' between types 'string' and 'nil'
 --> 1:1
  |
1 | "s" + nil; // expect runtime error: Operands must be two numbers or two strings.
  | ^-------^
